# smart-commit

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
src/smartcommit/: __init__.py
tests/: test_smartcommit.py
