[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-smart-commit"
version = "1.1.1"
description = "AI-powered Git commit message generator using Apple Intelligence"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Maverick Brazill", email = "brazillmav@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "apple_fm_sdk",
]

[project.scripts]
fm-smart-commit = "smartcommit:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["smartcommit*"]

[tool.pypi]
twine = "dist"

[tool.uv]
dev-dependencies = [
    "pytest",
    "pytest-asyncio",
]
